--- a/requirements.txt
+++ b/requirements.txt
@@ -27,9 +27,9 @@ retrying==1.3.4
 rpds-py==0.15.2
 setuptools==68.2.2
 tenacity==8.2.3
+plotly==5.18.0
 tzdata==2023.3
 urllib3==2.1.0
 Werkzeug==3.0.1
-gunicorn
 wheel==0.41.2
 
